--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,10 @@ div#taglarge {
     font-size: 25px;
 }
 
+.footer .foot-marginremover {
+    margin-top: -25px;
+}
+
 .footer a {
     color: white;
     -moz-transition: all .25s;
@@ -355,6 +359,111 @@ div#taglarge {
         font-size: 17.5px;
         padding-bottom: 15px;
     }
+    .footer .foot-marginremover {
+        margin-top: -5px;
+    }
+}
+
+/* PAGE ASSETS */
+
+/* Page Head */
+.pagehead {
+    margin-top: -100px;
+
+    padding-top: 75px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 10px;
+    
+    height: 150px;
+    position: relative;
+
+    background-image: url("../img/PIA12348_large.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+    color: white;
+}
+
+.pagehead .maintext {
+    margin: 0;
+    position: absolute;
+    top: 70%;
+    transform: translate(0%, -30%);
+
+    font-size: 50px;
+
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 400;
+}
+
+/* Projects Container */
+.projects {
+    background-color: #2c2c2c;
+    color: white;
+    padding-top: 15px;
+    padding-left: 30px;
+    padding-bottom: 15px;
+    padding-right: 30px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.projectscontainer {
+    font-family: 'Montserrat', sans-serif;
+    
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.projectsbox {
+    height: 425px;
+    width: 300px;
+    border: 2px solid #cecece;
+
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+
+    margin: 5px;
+
+    background-color: #cecece;
+    color: black;
+
+    -moz-transition: all .25s;
+    -o-transition: all .25s;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+
+    display: inline-block;
+    vertical-align: top;
+
+    flex-grow: 5;
+}
+
+.projectsbox:hover {
+    -webkit-box-shadow: 0px 0px 15px 5px rgba(42,255,0,0.37); 
+    box-shadow: 0px 0px 15px 5px rgba(42,255,0,0.37);
+}
+
+.projectsbox .img {
+    width: 100%;
+    height: 40%;
+    background-position: center;
+    background-size: cover;
+    
+    /* border radius */
+    -webkit-border-top-left-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+    -moz-border-radius-topleft: 4px;
+    -moz-border-radius-topright: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+.projectsbox .text {
+    padding: 5px;
+    text-align: center;
 }
 
 /* A tag */
