--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ div#taglarge {
 .portfoliobox .img {
     width: 100%;
     height: 40%;
-    background-position: center;
+    background-position: top;
     background-size: cover;
     
     /* border radius */
@@ -449,7 +449,7 @@ div#taglarge {
 .projectsbox .img {
     width: 100%;
     height: 40%;
-    background-position: center;
+    background-position: top;
     background-size: cover;
     
     /* border radius */
