--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ div#taglarge {
     font-weight: 400;
 
     /* Sticky Element */
-    position: fixed; /* Fix for old browsers */  
+    position: fixed; width: 100%; /* Fix for old browsers */  
 
     position: -webkit-sticky; /* Safari */
     position: sticky;
