--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,33 @@ div#taglarge {
     transition: all .25s;
 }
 
+div#tagmed {
+    padding: 5px;
+    margin: 5px;
+
+    background-color: #c5c5c5;
+    color: #000000;
+
+    font-size: 17.5px;
+
+    display:inline-block;
+    
+    margin-top: 2px;
+    margin-bottom: 2px;
+
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+
+    -moz-transition: all .25s;
+    -o-transition: all .25s;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+}
+
 
 /* Header */
 
@@ -533,6 +560,34 @@ div#taglarge {
     font-size: 20px;
 }
 
+/* Text Area */
+.textcontainer {
+    background-color: #2c2c2c;
+    color: white;
+    padding-top: 15px;
+    padding-left: 30px;
+    padding-bottom: 15px;
+    padding-right: 30px;
+}
+
+.textcontainer hr {
+    border-top: 1px #cacaca;
+    border-style: solid;
+    width: 75%;
+}
+
+.textcontainer hr.small-width {
+    width: 50%;
+}
+
+.tcontain-header {
+    text-align: center;
+}
+
+.tcontain-content {
+    text-align: center;
+    line-height: 22.5px;
+}
 /* A tag */
 
 a {
